@@ -1,0 +1,11 @@
+package github.pitbox46.eventz;
+
+public class EventzScriptLoadingException extends EventzScriptException {
+    public EventzScriptLoadingException(String string) {
+        super(string);
+    }
+
+    public EventzScriptLoadingException(String string, Throwable throwable) {
+        super(string, throwable);
+    }
+}
